--- a/resources/app-environment/petclinic-route.yaml
+++ b/resources/app-environment/petclinic-route.yaml
@@ -10,6 +10,9 @@ metadata:
 spec:
   port:
     targetPort: 8080-tcp
+  tls:
+    termination: edge
+    insecureEdgeTerminationPolicy: Redirect
   to:
     kind: Service
     name: petclinic
