--- a/resources/networkpolicies/allow-from-openshift-ingress.yaml
+++ b/resources/networkpolicies/allow-from-openshift-ingress.yaml
@@ -8,7 +8,7 @@ spec:
   - from:
     - namespaceSelector:
         matchLabels:
-          policy-group.network.openshift.io/ingress: ""
+          network.openshift.io/policy-group: ingress
   podSelector: {}
   policyTypes:
   - Ingress
